# psel

./: .gitignore  CHANGELOG.md  NOTE.org  README.md  flake.nix  psel.cabal
app/: Main.hs
src.el/: psel.el
src/PsEl/: CommandBuild.hs  CommandRun.hs  ForeignTemplate.hs  Main.hs  PselEl.hs  SExp.hs  SExpConstructor.hs  SExpDisplay.hs  SExpOptimize.hs  SExpPattern.hs  SExpPrinter.hs  SExpRaw.hs  SExpTraverse.hs  Transpile.hs
test-bare.purs/test/: Main.js  Main.purs  Utils.el  Utils.js  Utils.purs
test-bare.purs/test/PsEl/: TCO.purs
test-lib.purs/: .gitignore  spago.dhall
test-lib.purs/test/: Main.el  Main.purs
test.purs/: .gitignore  packages.dhall  spago.dhall
test.purs/test/: Main.el  Main.purs  TCO.el  TCO.purs  Utils.el  Utils.purs
test.purs/test/PsEl/: Record.purs  TCO.purs
