cabal-version:      2.4
name:               psel
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             kamoii
maintainer:         kamoii

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
  CHANGELOG.md
  README.md

library
  exposed-modules:
    PsEl.CommandBuild
    PsEl.CommandRun
    PsEl.ForeignTemplate
    PsEl.PselEl
    PsEl.SExp
    PsEl.SExpConstructor
    PsEl.SExpOptimize
    PsEl.SExpPrinter
    PsEl.SExpRaw
    PsEl.SExpTraverse
    PsEl.Transpile

  -- Modules included in this library but not exported.
  other-modules:

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:
  build-depends:
    , aeson
    , base                ^>=4.14.3.0
    , generic-lens
    , microlens
    , neat-interpolation
    , purescript          ^>=0.14.4
    , purescript-cst
    , recursion-schemes
    , regex
    , rio

  hs-source-dirs:     src
  default-language:   Haskell2010
  default-extensions:
    NoImplicitPrelude
    ImportQualifiedPost

executable psel
  main-is:            Main.hs

  -- Modules included in this executable, other than Main.
  -- other-modules:

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:
  build-depends:
    , base                  ^>=4.14.3.0
    , optparse-applicative
    , optparse-generic
    , psel
    , rio

  hs-source-dirs:     app
  default-language:   Haskell2010
  default-extensions:
    NoImplicitPrelude
    ImportQualifiedPost
